--- a/litemall-wx/project.config.json
+++ b/litemall-wx/project.config.json
@@ -21,7 +21,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.4.0",
-	"appid": "wxa5b486c6b918ecfb",
+	"appid": "wxa75ad65cbf73eef7",
 	"projectname": "litemall-wx",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
