--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>litemall-admin-api</module>
         <module>litemall-all</module>
         <module>litemall-all-war</module>
+        <module>litemall-date</module>
     </modules>
 
     <dependencyManagement>
@@ -102,12 +103,6 @@
             </dependency>
 
             <dependency>
-                <groupId>com.github.binarywang</groupId>
-                <artifactId>weixin-java-miniapp</artifactId>
-                <version>3.3.0</version>
-            </dependency>
-
-            <dependency>
                 <groupId>com.github.qcloudsms</groupId>
                 <artifactId>qcloudsms</artifactId>
                 <version>1.0.5</version>
@@ -129,6 +124,12 @@
                 <groupId>com.qiniu</groupId>
                 <artifactId>qiniu-java-sdk</artifactId>
                 <version>[7.2.0, 7.2.99]</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.binarywang</groupId>
+                <artifactId>weixin-java-miniapp</artifactId>
+                <version>3.3.0</version>
             </dependency>
 
             <dependency>
