--- a/litemall-wx/app.json
+++ b/litemall-wx/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    
     "pages/index/index",
     "pages/catalog/catalog",
     "pages/newGoods/newGoods",
@@ -40,11 +41,15 @@
     "pages/help/help",
     "pages/ucenter/aftersale/aftersale",
     "pages/ucenter/aftersaleList/aftersaleList",
-    "pages/ucenter/aftersaleDetail/aftersaleDetail"
+    "pages/ucenter/aftersaleDetail/aftersaleDetail",
+    "pages/ucenter/invited/invited",
+    "pages/ucenter/inviteCode/inviteCode"
+    
+    
   ],
   "window": {
     "navigationBarBackgroundColor": "#FFFFFF",
-    "navigationBarTitleText": "litemall小程序商城",
+    "navigationBarTitleText": "北极星商城",
     "enablePullDownRefresh": false,
     "navigationBarTextStyle": "black",
     "backgroundColor": "#FFFFFF",
