增加积分纪录

--- a/litemall-date/src/main/resources/application-db.yml
+++ b/litemall-date/src/main/resources/application-db.yml
@@ -22,6 +22,8 @@ mybatis-plus:
   mapper-locations: classpath:org/linlinjava/**/mapper/*Mapper.xml
   #实体扫描，多个package用逗号或者分号分隔
   typeAliasesPackage: org.linlinjava.**.entity
+
+  typeEnumsPackage: org.linlinjava.litemall.db.common.enums
   #typeEnumsPackage: org.springblade.dashboard.entity.enums
   global-config:
     # 关闭MP3.0自带的banner
