--- a/litemall-admin/.env.production
+++ b/litemall-admin/.env.production
@@ -4,5 +4,5 @@ NODE_ENV = production
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'https://www.example.com/admin'
+VUE_APP_BASE_API = 'https://mng.jhaotian.com/admin'
 
